--- a/index.html
+++ b/index.html
@@ -204,6 +204,130 @@
             height: 24px;
             fill: white;
         }
+
+        /* Mobile-specific styles */
+        @media screen and (max-width: 768px) {
+            body {
+                padding-top: 50px;
+                min-height: calc(100vh - 50px);
+                position: relative;
+            }
+
+            #gameContainer {
+                width: 90vw;
+                height: calc(90vw * 0.5556);
+                max-height: 60vh;
+                margin: 20px auto;
+                border-radius: 8px;
+                position: relative;
+            }
+
+            #gameCanvas {
+                width: 100%;
+                height: 100%;
+                border-radius: 8px;
+            }
+
+            .title {
+                color: #225D31;
+                text-align: center;
+                font-family: Neulis;
+                font-size: 20px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: normal;
+                margin: 0;
+                width: 100%;
+                padding: 0 20px;
+                box-sizing: border-box;
+            }
+
+            .subtitle {
+                color: #225D31;
+                text-align: center;
+                font-family: Quicksand;
+                font-size: 14px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: normal;
+                margin: 4px 0 12px 0;
+                width: 100%;
+                padding: 0 20px;
+                box-sizing: border-box;
+            }
+
+            .game-controls {
+                width: 90vw;
+                margin: 12px auto;
+                padding: 0 20px;
+                box-sizing: border-box;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 12px;
+            }
+
+            .controls-right {
+                position: static;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 8px;
+                z-index: 100;
+                width: 100%;
+                max-width: 200px;
+            }
+
+            #pauseButton {
+                width: 36px;
+                height: 36px;
+                align-self: center;
+            }
+
+            .pick-ride-button, #playButton {
+                padding: 8px 16px;
+                font-size: 14px;
+                height: 32px;
+                width: 100%;
+                text-align: center;
+                justify-content: center;
+                white-space: nowrap;
+            }
+
+            .pick-ride-button {
+                order: 2;
+            }
+
+            #playButton {
+                order: 1;
+            }
+
+            #pauseButton {
+                order: 3;
+            }
+
+            .personal-best {
+                font-size: 14px;
+                margin-bottom: 4px;
+            }
+
+            #touchArea {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 50;
+                border-radius: 8px;
+            }
+
+            .toast {
+                top: 60px;
+                width: 80%;
+                max-width: 300px;
+                font-size: 14px;
+            }
+        }
     </style>
 </head>
 <body>
