Enhanced mobile scrolling and touch functionality: - Added mobile wrapper for better content organization - Improved touch event handling - Added smooth scrolling support - Fixed game container interaction

--- a/index.html
+++ b/index.html
@@ -209,8 +209,19 @@
         @media screen and (max-width: 768px) {
             body {
                 padding-top: 50px;
-                min-height: calc(100vh - 50px);
+                min-height: 100vh;
                 position: relative;
+                overflow-y: auto;
+                -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+            }
+
+            .mobile-wrapper {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                min-height: 100vh;
+                padding-bottom: 100px; /* Space for controls */
+                box-sizing: border-box;
             }
 
             #gameContainer {
@@ -220,12 +231,25 @@
                 margin: 20px auto;
                 border-radius: 8px;
                 position: relative;
+                overflow: hidden; /* Prevent game content from scrolling */
             }
 
             #gameCanvas {
                 width: 100%;
                 height: 100%;
                 border-radius: 8px;
+                touch-action: none; /* Prevent touch scrolling on canvas */
+            }
+
+            #touchArea {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 50;
+                border-radius: 8px;
+                touch-action: none; /* Prevent touch scrolling on game area */
             }
 
             .title {
@@ -265,6 +289,8 @@
                 flex-direction: column;
                 align-items: center;
                 gap: 12px;
+                position: relative;
+                z-index: 60;
             }
 
             .controls-right {
@@ -276,6 +302,13 @@
                 z-index: 100;
                 width: 100%;
                 max-width: 200px;
+            }
+
+            .personal-best {
+                font-size: 14px;
+                margin-bottom: 4px;
+                position: relative;
+                z-index: 60;
             }
 
             #pauseButton {
@@ -306,21 +339,6 @@
                 order: 3;
             }
 
-            .personal-best {
-                font-size: 14px;
-                margin-bottom: 4px;
-            }
-
-            #touchArea {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                z-index: 50;
-                border-radius: 8px;
-            }
-
             .toast {
                 top: 60px;
                 width: 80%;
@@ -331,24 +349,26 @@
     </style>
 </head>
 <body>
-    <h1 class="title">Auto Rush</h1>
-    <p class="subtitle">click the space bar to move up/start the game</p>
-    <div id="gameContainer">
-        <canvas id="gameCanvas"></canvas>
-        <div id="touchArea"></div>
-    </div>
-    <div class="game-controls">
-        <div class="personal-best">Personal best: <span id="personalBest">0</span></div>
-        <div class="controls-right">
-            <button class="pause-button" id="pauseButton" tabindex="-1">
-                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M9 0.75C4.44365 0.75 0.75 4.44365 0.75 9C0.75 13.5563 4.44365 17.25 9 17.25C13.5563 17.25 17.25 13.5563 17.25 9C17.25 4.44365 13.5563 0.75 9 0.75ZM7.875 6.75C7.875 6.33579 7.53921 6 7.125 6C6.71079 6 6.375 6.33579 6.375 6.75V11.25C6.375 11.6642 6.71079 12 7.125 12C7.53921 12 7.875 11.6642 7.875 11.25V6.75ZM11.625 6.75C11.625 6.33579 11.2892 6 10.875 6C10.4608 6 10.125 6.33579 10.125 6.75V11.25C10.125 11.6642 10.4608 12 10.875 12C11.2892 12 11.625 11.6642 11.625 11.25V6.75Z" fill="white"/>
-                </svg>
-            </button>
-            <a href="select-vehicle.html" class="pick-ride-button">
-                Pick your ride
-            </a>
-            <button class="play-button" id="playButton">Play</button>
+    <div class="mobile-wrapper">
+        <h1 class="title">Auto Rush</h1>
+        <p class="subtitle">click the space bar to move up/start the game</p>
+        <div id="gameContainer">
+            <canvas id="gameCanvas"></canvas>
+            <div id="touchArea"></div>
+        </div>
+        <div class="game-controls">
+            <div class="personal-best">Personal best: <span id="personalBest">0</span></div>
+            <div class="controls-right">
+                <button class="pause-button" id="pauseButton" tabindex="-1">
+                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M9 0.75C4.44365 0.75 0.75 4.44365 0.75 9C0.75 13.5563 4.44365 17.25 9 17.25C13.5563 17.25 17.25 13.5563 17.25 9C17.25 4.44365 13.5563 0.75 9 0.75ZM7.875 6.75C7.875 6.33579 7.53921 6 7.125 6C6.71079 6 6.375 6.33579 6.375 6.75V11.25C6.375 11.6642 6.71079 12 7.125 12C7.53921 12 7.875 11.6642 7.875 11.25V6.75ZM11.625 6.75C11.625 6.33579 11.2892 6 10.875 6C10.4608 6 10.125 6.33579 10.125 6.75V11.25C10.125 11.6642 10.4608 12 10.875 12C11.2892 12 11.625 11.6642 11.625 11.25V6.75Z" fill="white"/>
+                    </svg>
+                </button>
+                <a href="select-vehicle.html" class="pick-ride-button">
+                    Pick your ride
+                </a>
+                <button class="play-button" id="playButton">Play</button>
+            </div>
         </div>
     </div>
     <div id="toast" class="toast"></div>
