--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto Rush</title>
-    <link rel="icon" type="image/svg+xml" href="assets/Auto 1.svg">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚗</text></svg>">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;600&display=swap" rel="stylesheet">
@@ -30,6 +30,9 @@
             background: #8ED4A0;
             border: none;
             border-radius: 8px;
+            max-width: 90vw;
+            max-height: 60vh;
+            aspect-ratio: 900/500;
         }
         canvas {
             width: 100%;
@@ -223,16 +226,18 @@
                 min-height: 100vh;
                 padding-bottom: 100px; /* Space for controls */
                 box-sizing: border-box;
+                width: 100%;
+                max-width: 100vw;
             }
 
             #gameContainer {
                 width: 90vw;
-                height: calc(90vw * 0.5556);
-                max-height: 60vh;
+                height: auto;
                 margin: 20px auto;
                 border-radius: 8px;
                 position: relative;
                 overflow: hidden; /* Prevent game content from scrolling */
+                aspect-ratio: 900/500;
             }
 
             #gameCanvas {
