Update game.js and index.html with latest changes

--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
             background: #8ED4A0;
             border: none;
             border-radius: 8px;
-            max-width: 90vw;
-            max-height: 60vh;
-            aspect-ratio: 900/500;
         }
         canvas {
             width: 100%;
@@ -226,18 +223,16 @@
                 min-height: 100vh;
                 padding-bottom: 100px; /* Space for controls */
                 box-sizing: border-box;
-                width: 100%;
-                max-width: 100vw;
             }
 
             #gameContainer {
                 width: 90vw;
-                height: auto;
+                height: calc(90vw * 0.5556);
+                max-height: 60vh;
                 margin: 20px auto;
                 border-radius: 8px;
                 position: relative;
                 overflow: hidden; /* Prevent game content from scrolling */
-                aspect-ratio: 900/500;
             }
 
             #gameCanvas {
