--- a/select-vehicle.html
+++ b/select-vehicle.html
@@ -41,27 +41,29 @@
             margin: 8px 0 0 0;
         }
         .selection-container {
-            width: 900px;
-            padding: 32px;
-            margin-top: 24px;
+            width: 90vw;
+            max-width: 900px;
+            padding: 16px;
+            margin-top: 16px;
+            box-sizing: border-box;
         }
         .vehicles-grid {
             display: grid;
             grid-template-columns: repeat(5, 1fr);
-            gap: 16px;
-            padding: 16px 0;
+            gap: 12px;
+            padding: 12px 0;
         }
         .vehicle-option {
             background: #8ED4A0;
             border: 2px solid transparent;
             border-radius: 4px;
-            padding: 16px 16px 16px 16px;
+            padding: 12px;
             cursor: pointer;
             transition: all 0.2s ease;
             display: flex;
             flex-direction: column;
             align-items: center;
-            height: 140px;
+            height: 120px;
             box-sizing: border-box;
             position: relative;
         }
@@ -87,7 +89,7 @@
         .vehicle-option img {
             width: 100%;
             height: auto;
-            max-height: 80px;
+            max-height: 60px;
             object-fit: contain;
             transition: transform 0.2s ease;
         }
@@ -97,11 +99,11 @@
         .vehicle-name {
             color: #225D31;
             font-family: 'Quicksand', sans-serif;
-            font-size: 14px;
+            font-size: 12px;
             font-weight: 600;
             text-align: center;
             position: absolute;
-            bottom: 16px;
+            bottom: 12px;
             left: 0;
             right: 0;
             padding: 0 8px;
@@ -109,19 +111,19 @@
         .button-container {
             display: flex;
             justify-content: center;
-            gap: 16px;
-            margin-top: 32px;
+            gap: 12px;
+            margin-top: 24px;
         }
         .button {
             border: 2px solid #225D31;
             border-radius: 4px;
-            height: 36px;
-            min-height: 36px;
+            height: 32px;
+            min-height: 32px;
             cursor: pointer;
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 0 24px;
+            padding: 0 16px;
             color: #225D31;
             font-family: 'Quicksand', sans-serif;
             font-size: 14px;
@@ -131,12 +133,8 @@
             text-decoration: none;
             transition: all 0.2s ease;
             background: transparent;
-            min-width: 100px;
+            min-width: 80px;
             box-sizing: border-box;
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            appearance: none;
-            margin: 0;
         }
         .button.primary {
             background: #225D31;
@@ -172,6 +170,67 @@
             transform: none;
             box-shadow: none;
             border-color: transparent;
+        }
+
+        /* Mobile-specific styles */
+        @media screen and (max-width: 768px) {
+            body {
+                padding-top: 40px;
+                min-height: 100vh;
+                position: relative;
+                overflow-y: auto;
+                -webkit-overflow-scrolling: touch;
+            }
+
+            .title {
+                font-size: 24px;
+                margin-bottom: 8px;
+            }
+
+            .subtitle {
+                font-size: 14px;
+                margin: 0 0 16px 0;
+                padding: 0 16px;
+            }
+
+            .selection-container {
+                width: 100%;
+                padding: 16px;
+                margin-top: 0;
+            }
+
+            .vehicles-grid {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 12px;
+                padding: 8px 0;
+            }
+
+            .vehicle-option {
+                height: 100px;
+                padding: 8px;
+            }
+
+            .vehicle-option img {
+                max-height: 50px;
+            }
+
+            .vehicle-name {
+                font-size: 11px;
+                bottom: 8px;
+            }
+
+            .button-container {
+                margin-top: 20px;
+                gap: 8px;
+            }
+
+            .button {
+                height: 32px;
+                min-height: 32px;
+                font-size: 13px;
+                padding: 0 12px;
+                min-width: 70px;
+            }
         }
     </style>
 </head>
