--- a/index.html
+++ b/index.html
@@ -297,20 +297,10 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                justify-content: center;
                 gap: 12px;
                 position: relative;
                 z-index: 60;
-            }
-
-            .controls-right {
-                position: static;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 8px;
-                z-index: 100;
-                width: 100%;
-                max-width: 200px;
             }
 
             .personal-best {
@@ -318,26 +308,55 @@
                 margin-bottom: 4px;
                 position: relative;
                 z-index: 60;
+                text-align: center;
+                width: 100%;
+            }
+
+            .controls-right {
+                position: static;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                gap: 8px;
+                z-index: 100;
+                width: 100%;
+                max-width: 300px;
             }
 
             #pauseButton {
                 width: 36px;
                 height: 36px;
                 align-self: center;
+                visibility: hidden;
+                display: none;
+            }
+
+            #pauseButton[style*="visibility: visible"] {
+                display: flex;
             }
 
             .pick-ride-button, #playButton {
                 padding: 8px 16px;
                 font-size: 14px;
-                height: 32px;
-                width: 100%;
+                height: 36px;
+                min-height: 36px;
+                width: auto;
                 text-align: center;
+                display: flex;
+                align-items: center;
                 justify-content: center;
                 white-space: nowrap;
+            
             }
 
             .pick-ride-button {
                 order: 2;
+                text-decoration: none;
+                color: #225D31;
+                background: transparent;
+                border: 2px solid #225D31;
+                border-radius: 4px;
             }
 
             #playButton {
