--- a/select-vehicle.html
+++ b/select-vehicle.html
@@ -110,15 +110,18 @@
         }
         .button-container {
             display: flex;
+            flex-direction: row;
             justify-content: center;
+            align-items: center;
             gap: 12px;
-            margin-top: 24px;
+            margin-top: 20px;
+            width: 100%;
         }
         .button {
             border: 2px solid #225D31;
             border-radius: 4px;
-            height: 32px;
-            min-height: 32px;
+            height: 36px;
+            min-height: 36px;
             cursor: pointer;
             display: flex;
             align-items: center;
@@ -135,6 +138,7 @@
             background: transparent;
             min-width: 80px;
             box-sizing: border-box;
+            width: auto;
         }
         .button.primary {
             background: #225D31;
@@ -225,11 +229,11 @@
             }
 
             .button {
-                height: 32px;
-                min-height: 32px;
-                font-size: 13px;
-                padding: 0 12px;
-                min-width: 70px;
+                height: 36px;
+                min-height: 36px;
+                font-size: 14px;
+                padding: 0 16px;
+                min-width: 80px;
             }
         }
     </style>
