Update Neulis font to ExtraBold weight

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <style>
         @font-face {
             font-family: 'Neulis';
-            src: url('fonts/Neulis-Regular.ttf') format('truetype');
+            src: url('Fonts/Neulis-ExtraBold.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
             font-display: swap;
